# AsteroidHunter

./: .gitignore  README.md  app.js  docs.html  index.html  pyproject.toml  renderer.js  vectorfont.js
docs/superpowers/specs/: 2026-06-21-asteroidhunter-design.md
scripts/: build_web.sh  serve.sh
src/asteroidhunter/: __init__.py  config.py  env.py
src/asteroidhunter/core/: __init__.py  browser.py  field.py  physics.py  view.py  world.py
web/: app.js  docs.html  index.html  renderer.js
